[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/enemy/slime-Sheet.png" type="Texture" id=1]
[ext_resource path="res://enemy.gd" type="Script" id=11]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 32, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 64, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 96, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 128, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 160, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 224, 25, 32, 25 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 50, 32, 25 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 25 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 25 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.48988, 4.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 7.84218, 2.06483 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 12.0045, 4.05333 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3 )
frames = SubResource( 1 )
animation = "move"
frame = 1
playing = true

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.496056, 4 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( -1, 4 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16

[node name="top_hitbox" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -0.850622, -3.21736 )
rotation = -3.14159
shape = SubResource( 11 )

[node name="side_checker" type="Area2D" parent="."]
position = Vector2( 9.8125, 1.8125 )
collision_layer = 0

[node name="side_hitbox" type="CollisionShape2D" parent="side_checker"]
position = Vector2( -10.3385, 1.49125 )
shape = SubResource( 16 )

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
